modifique el json

--- a/angular.json
+++ b/angular.json
@@ -111,7 +111,9 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/pedroDoBandolim/"
         }
       }
     }
