--- a/angular.json
+++ b/angular.json
@@ -46,10 +46,8 @@
             ],
 
             "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "prerender": false,
+            "ssr": false
           },
           "configurations": {
             "production": {
@@ -118,4 +116,5 @@
       }
     }
   }
+}
 }
